--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
 
     .main > .inner {
       position: relative;
-      padding-top: 20px;
       height: 100%;
       -webkit-filter: blur(3px);
       filter: blur(4px);
@@ -238,7 +237,7 @@
     .main .track {
       width: 100%;
       text-align: center;
-      padding: 0 10px 20px;
+      padding: 20px 10px;
     }
 
     .main .track .logo {
