--- a/index.html
+++ b/index.html
@@ -489,7 +489,6 @@
       width: 80vw;
       height: 20vh;
       text-decoration: none;
-      text-transform: uppercase;
       text-align: center;
       background-color: #ef6129;
       -webkit-border-radius: 20px;
@@ -519,8 +518,8 @@
       -ms-transform: translate(0, -50%);
       transform: translate(0, -50%);
       content: '';
-      display: none;
-      width: 30px;
+      display: block;
+      width: 25px;
       height: 27px;
       margin-left: 5px;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='443.307' height='443.306'%3E%3Cpath d='M415.934 212.799L36.788 2.097C32.411-.377 28.65-.661 25.51 1.242c-3.14 1.902-4.708 5.328-4.708 10.276V431.78c0 4.952 1.569 8.381 4.708 10.284 3.14 1.902 6.901 1.622 11.278-.855l379.146-210.703c4.381-2.478 6.571-5.434 6.571-8.856 0-3.426-2.191-6.376-6.571-8.851z' fill='%23fff'/%3E%3C/svg%3E");
@@ -570,9 +569,9 @@
     }
 
     @media screen and (min-width: 370px) {
-      .main .btn span::after {
-        display: block;
-      }
+      /*.main .btn span::after {*/
+      /*  display: block;*/
+      /*}*/
     }
 
     /*PLAYER--------------------------------------------------*/
