--- a/index.html
+++ b/index.html
@@ -175,36 +175,17 @@
 
     .header .name span {
       font-family: 'Rubik', sans-serif;
-      font-size: 25px;
+      font-size: 20px;
       font-weight: bold;
-      color: #fff;
+      color: #e1e1e1;
       line-height: 40px;
       text-align: center;
       text-transform: uppercase;
     }
 
-    .header .menu {
-      display: table-cell;
-      vertical-align: middle;
-      width: 25px;
-    }
-
-    .header .menu button {
-      width: 25px;
-      height: 25px;
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='344.339' height='344.339'%3E%3Cpath d='M0 46.06h344.339v29.52H0zM0 156.506h344.339v29.52H0zM0 268.748h344.339v29.531H0z' fill='%23fff'/%3E%3C/svg%3E");
-      -webkit-background-size: contain;
-      background-size: contain;
-      background-position: 0 0;
-      background-repeat: no-repeat;
-      border: none;
-    }
-
     .header .plus18 {
       display: table-cell;
       width: 30px;
-      padding-right: 8px;
     }
 
     .header .plus18 div {
@@ -507,6 +488,7 @@
       font-weight: bold;
       line-height: 32px;
       color: #FFFFFF;
+      letter-spacing: -1px;
       text-shadow: 0 4px 7px rgba(0, 0, 0, 0.31);
     }
 
@@ -756,9 +738,6 @@
     </div>
     <div class="plus18">
       <div></div>
-    </div>
-    <div class="menu">
-      <button disabled></button>
     </div>
   </div>
 </div>
