--- a/index.html
+++ b/index.html
@@ -173,15 +173,23 @@
       text-align: left;
     }
 
-    .header .name span {
+    .header .name p {
       font-family: 'Rubik', sans-serif;
-      font-size: 20px;
       font-weight: bold;
       color: #e1e1e1;
-      line-height: 40px;
-      text-align: center;
+      text-align: left;
       text-transform: uppercase;
     }
+
+		.header .name p:first-child {
+			font-size: 10px;
+			line-height: 14px;
+		}
+
+		.header .name p:last-child {
+			font-size: 20px;
+			line-height: 20px;
+		}
 
     .header .plus18 {
       display: table-cell;
@@ -211,14 +219,15 @@
     .main > .inner {
       position: relative;
       height: 100%;
-      -webkit-filter: blur(3px);
-      filter: blur(4px);
+			overflow: hidden;
     }
 
     .main .track {
       width: 100%;
       text-align: center;
       padding: 20px 10px;
+			-webkit-filter: blur(3px);
+			filter: blur(4px);
     }
 
     .main .track .logo {
@@ -323,6 +332,8 @@
     .main .track-info-btn {
       display: none;
       text-align: center;
+			-webkit-filter: blur(3px);
+			filter: blur(4px);
     }
 
     .main .track-info-btn button {
@@ -340,6 +351,8 @@
       width: 90%;
       margin: 0 auto 20px;
       border-collapse: collapse;
+			-webkit-filter: blur(3px);
+			filter: blur(4px);
     }
 
     .main .track-info td {
@@ -377,6 +390,8 @@
     .rating {
       display: table;
       margin: 0 auto;
+			-webkit-filter: blur(3px);
+			filter: blur(4px);
     }
 
     .rating .inner {
@@ -471,7 +486,7 @@
       height: 20vh;
       text-decoration: none;
       text-align: center;
-      background-color: #ef6129;
+      background-color: #1CA46A;
       -webkit-border-radius: 20px;
       border-radius: 20px;
     }
@@ -683,17 +698,27 @@
       background-color: #fff;
     }
 
-    @media screen and (orientation: landscape) {
+    @media screen and (max-height: 420px) {
       .player .inner {
         display: inline-block;
-        width: 60%;
+        width: 50%;
       }
 
       .player .bottom {
         display: inline-block;
-        width: 40%;
+        width: 50%;
       }
+
+			.player .inner .top > .volume {
+				display: none;
+			}
     }
+
+		@media screen and (max-height: 330px) {
+			.player {
+				display: none;
+			}
+		}
 
 
     /*FOOTER--------------------------------------------------*/
@@ -729,7 +754,8 @@
       <button disabled></button>
     </div>
     <div class="name">
-      <span>Аудиокниги</span>
+      <p>аудио</p>
+      <p>книги</p>
     </div>
     <div class="plus18">
       <div></div>
