--- a/index.html
+++ b/index.html
@@ -148,24 +148,6 @@
       vertical-align: middle;
     }
 
-    .header .logo {
-      display: table-cell;
-      height: 100%;
-      width: 30px;
-    }
-
-    .header .logo button {
-      width: 35px;
-      height: 35px;
-      background-color: transparent;
-      border: none;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 58 58'%3E%3Cpath fill='%23ef6129' d='M8 6h42v46H8z'/%3E%3Cg fill='%23ebba16'%3E%3Cpath d='M50 10h4v38h-4zM4 10h4v38H4z'/%3E%3C/g%3E%3Cg fill='%23efce4a'%3E%3Cpath d='M54 14h4v30h-4zM0 14h4v30H0z'/%3E%3C/g%3E%3Cpath d='M43.649 12.24a1 1 0 0 0-.805-.228l-19 3A1 1 0 0 0 23 16v19.68A6.765 6.765 0 0 0 18.5 34c-3.584 0-6.5 2.691-6.5 6s2.916 6 6.5 6c3.533 0 6.411-2.617 6.492-5.861.001-.013.008-.024.008-.037V22.854l17-2.684v9.511C40.831 28.642 39.246 28 37.5 28c-3.584 0-6.5 2.691-6.5 6s2.916 6 6.5 6 6.5-2.691 6.5-6V13a.999.999 0 0 0-.351-.76z' fill='%23fff'/%3E%3C/svg%3E");
-      -webkit-background-size: contain;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-
     .header .name {
       display: table-cell;
       padding-left: 10px;
@@ -176,20 +158,12 @@
     .header .name p {
       font-family: 'Rubik', sans-serif;
       font-weight: bold;
+			font-size: 10px;
+			line-height: 14px;
       color: #e1e1e1;
       text-align: left;
       text-transform: uppercase;
     }
-
-		.header .name p:first-child {
-			font-size: 10px;
-			line-height: 14px;
-		}
-
-		.header .name p:last-child {
-			font-size: 20px;
-			line-height: 20px;
-		}
 
     .header .plus18 {
       display: table-cell;
@@ -750,12 +724,8 @@
 <body>
 <div class="header">
   <div class="inner">
-    <div class="logo">
-      <button disabled></button>
-    </div>
     <div class="name">
-      <p>аудио</p>
-      <p>книги</p>
+      <p>аудиокниги</p>
     </div>
     <div class="plus18">
       <div></div>
