--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
       font-family: 'Open Sans', sans-serif;
       font-size: 22px;
       line-height: 22px;
-      color: #ddd;
+      color: #8b8787;
       background-color: #fff;
     }
 
