--- a/index.html
+++ b/index.html
@@ -241,65 +241,24 @@
       border-left-color: transparent;
     }
 
-    .main .track .band {
-      margin-bottom: 5px;
-      font-family: 'Rubik', sans-serif;
-      font-size: 20px;
-      font-weight: bold;
-      line-height: 20px;
-      color: #1CA46A;
-    }
+		@media screen and (max-height: 490px) {
+			.main .track {
+				position: relative;
+				height: 100%;
+				padding: 0;
+			}
 
-    .main .track .title {
-      font-family: 'Rubik', sans-serif;
-      font-size: 20px;
-      font-weight: bold;
-      line-height: 20px;
-    }
+			.main .track .logo {
+				width: 100%;
+				height: 100%;
+				margin: 0;
+			}
 
-    @media screen and (max-height: 480px) {
-      .main .inner {
-        padding: 0;
-      }
-
-      .main .track {
-        position: relative;
-        height: 100%;
-        padding: 0;
-      }
-
-      .main .track .logo {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-      }
-
-      .main .track .logo::after,
-      .main .track .logo::before {
-        display: none;
-      }
-
-      .main .track .title-wrapper {
-        position: absolute;
-        top: 30%;
-        left: 0;
-        right: 0;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-      }
-
-      .main .track .band,
-      .main .track .title {
-        font-size: 30px;
-        line-height: 30px;
-        text-shadow: 0 0 10px #000;
-      }
-
-      .main .track .title {
-        color: #fff;
-      }
-    }
+			.main .track .logo::after,
+			.main .track .logo::before {
+				display: none;
+			}
+		}
 
     /*TRACK-INFO--------------------------------------------*/
 
@@ -341,98 +300,100 @@
       background-color: #ddd;
     }
 
-    @media screen and (max-height: 635px) {
-      .main .track-info {
-        display: none;
-      }
-
+    @media screen and (max-height: 520px) {
       .main .track-info-btn {
         display: block;
       }
     }
 
-    @media screen and (max-height: 540px) {
+    @media screen and (max-height: 490px) {
       .main .track-info-btn {
         display: none;
       }
     }
 
-		/*PLACEHOLDER*/
+		/*Tracklist*/
 
-		.placeholder {
-			display: table-row;
+		.tracklist {
 			width: 100%;
-			height: 156px;
+			padding: 0 10px;
+			overflow: hidden;
+			-webkit-filter: blur(3px);
+			filter: blur(4px);
 		}
 
-		@media screen and (max-height: 540px) {
-			.placeholder {
+		.tracklist table {
+			width: 100%;
+			border-collapse: collapse;
+			font-family: 'Rubik', sans-serif;
+			font-size: 14px;
+			font-weight: normal;
+		}
+
+		.tracklist table tr:nth-child(odd) {
+			background-color: #eee;
+		}
+
+		.tracklist table td {
+			padding: 10px;
+		}
+
+		.tracklist table td:nth-child(1) {
+			font-weight: bold;
+		}
+
+		.tracklist table td:nth-child(1),
+		.tracklist table td:nth-child(2) {
+			width: 50%;
+		}
+
+		@media screen and (max-height: 770px) {
+			.tracklist table tr:nth-last-child(1) {
 				display: none;
 			}
 		}
 
+		@media screen and (max-height: 740px) {
+			.tracklist table tr:nth-last-child(2) {
+				display: none;
+			}
+		}
 
-    /*RATING------------------------------------------------*/
+		@media screen and (max-height: 710px) {
+			.tracklist table tr:nth-last-child(3) {
+				display: none;
+			}
+		}
 
+		@media screen and (max-height: 660px) {
+			.tracklist table tr:nth-last-child(4) {
+				display: none;
+			}
+		}
 
-    .rating {
-      display: table;
-      margin: 0 auto;
-			-webkit-filter: blur(3px);
-			filter: blur(4px);
-    }
+		@media screen and (max-height: 630px) {
+			.tracklist table tr:nth-last-child(5) {
+				display: none;
+			}
+		}
 
-    .rating .inner {
-      display: table-row;
-      text-align: center;
-    }
+		@media screen and (max-height: 590px) {
+			.tracklist table tr:nth-last-child(6) {
+				display: none;
+			}
+		}
 
-    .rating .inner > div {
-      display: table-cell;
-      vertical-align: middle;
-    }
+		@media screen and (max-height: 560px) {
+			.tracklist table tr:nth-last-child(7) {
+				display: none;
+			}
+		}
 
-    .rating button {
-      width: 40px;
-      height: 40px;
-      background-color: transparent;
-      border: none;
-      -webkit-background-size: contain;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-
-    .rating .like-wrapper {
-      width: 40px;
-      height: 40px;
-    }
-
-    .rating .like-wrapper button {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 464.9 478.2'%3E%3Cpath d='M450.9 325.1c9.8-12.5 14.5-25.9 13.9-39.7-.6-15.2-7.4-27.1-13-34.4 6.5-16.2 9-41.7-12.7-61.5-15.9-14.5-42.9-21-80.3-19.2-26.3 1.2-48.3 6.1-49.2 6.3h-.1c-5 .9-10.3 2-15.7 3.2-.4-6.4.7-22.3 12.5-58.1 14-42.6 13.2-75.2-2.6-97C287.1 1.8 260.6 0 252.8 0c-7.5 0-14.4 3.1-19.3 8.8-11.1 12.9-9.8 36.7-8.4 47.7-13.2 35.4-50.2 122.2-81.5 146.3-.6.4-1.1.9-1.6 1.4-9.2 9.7-15.4 20.2-19.6 29.4-5.9-3.2-12.6-5-19.8-5h-61c-23 0-41.6 18.7-41.6 41.6v162.5c0 23 18.7 41.6 41.6 41.6h61c8.9 0 17.2-2.8 24-7.6l23.5 2.8c3.6.5 67.6 8.6 133.3 7.3 11.9.9 23.1 1.4 33.5 1.4 17.9 0 33.5-1.4 46.5-4.2 30.6-6.5 51.5-19.5 62.1-38.6 8.1-14.6 8.1-29.1 6.8-38.3 19.9-18 23.4-37.9 22.7-51.9-.4-8.1-2.2-15-4.1-20.1zM41.6 447.3c-8.1 0-14.6-6.6-14.6-14.6V270.1c0-8.1 6.6-14.6 14.6-14.6h61c8.1 0 14.6 6.6 14.6 14.6v162.5c0 8.1-6.6 14.6-14.6 14.6l-61 .1zm383.7-133.9c-4.2 4.4-5 11.1-1.8 16.3 0 .1 4.1 7.1 4.6 16.7.7 13.1-5.6 24.7-18.8 34.6-4.7 3.6-6.6 9.8-4.6 15.4 0 .1 4.3 13.3-2.7 25.8-6.7 12-21.6 20.6-44.2 25.4-18.1 3.9-42.7 4.6-72.9 2.2h-1.4c-64.3 1.4-129.3-7-130-7.1h-.1l-10.1-1.2c.6-2.8.9-5.8.9-8.8V270.1c0-4.3-.7-8.5-1.9-12.4 1.8-6.7 6.8-21.6 18.6-34.3 44.9-35.6 88.8-155.7 90.7-160.9.8-2.1 1-4.4.6-6.7-1.7-11.2-1.1-24.9 1.3-29 5.3.1 19.6 1.6 28.2 13.5 10.2 14.1 9.8 39.3-1.2 72.7-16.8 50.9-18.2 77.7-4.9 89.5 6.6 5.9 15.4 6.2 21.8 3.9 6.1-1.4 11.9-2.6 17.4-3.5.4-.1.9-.2 1.3-.3 30.7-6.7 85.7-10.8 104.8 6.6 16.2 14.8 4.7 34.4 3.4 36.5-3.7 5.6-2.6 12.9 2.4 17.4.1.1 10.6 10 11.1 23.3.4 8.9-3.8 18-12.5 27z'/%3E%3C/svg%3E");
-    }
-
-    .rating .dislike-wrapper button {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 464.9 478.2'%3E%3Cpath d='M14 153.1C4.2 165.6-.5 179 .1 192.8c.6 15.2 7.4 27.1 13 34.4-6.5 16.2-9 41.7 12.7 61.5 15.9 14.5 42.9 21 80.3 19.2 26.3-1.2 48.3-6.1 49.2-6.3h.1c5-.9 10.3-2 15.7-3.2.4 6.4-.7 22.3-12.5 58.1-14 42.6-13.2 75.2 2.6 97 16.6 22.9 43.1 24.7 50.9 24.7 7.5 0 14.4-3.1 19.3-8.8 11.1-12.9 9.8-36.7 8.4-47.7 13.2-35.4 50.2-122.2 81.5-146.3.6-.4 1.1-.9 1.6-1.4 9.2-9.7 15.4-20.2 19.6-29.4 5.9 3.2 12.6 5 19.8 5h61c23 0 41.6-18.7 41.6-41.6V45.5c0-23-18.7-41.6-41.6-41.6h-61c-8.9 0-17.2 2.8-24 7.6l-23.5-2.8c-3.6-.5-67.6-8.6-133.3-7.3C169.6.5 158.4 0 148 0c-17.9 0-33.5 1.4-46.5 4.2C70.9 10.7 50 23.7 39.4 42.8c-8.1 14.6-8.1 29.1-6.8 38.3C12.7 99.1 9.2 119 9.9 133c.4 8.1 2.2 15 4.1 20.1zM423.3 30.9c8.1 0 14.6 6.6 14.6 14.6v162.6c0 8.1-6.6 14.6-14.6 14.6h-61c-8.1 0-14.6-6.6-14.6-14.6V45.6c0-8.1 6.6-14.6 14.6-14.6l61-.1zM39.6 164.8c4.2-4.4 5-11.1 1.8-16.3 0-.1-4.1-7.1-4.6-16.7-.7-13.1 5.6-24.7 18.8-34.6 4.7-3.6 6.6-9.8 4.6-15.4 0-.1-4.3-13.3 2.7-25.8 6.7-12 21.6-20.6 44.2-25.4 18.1-3.9 42.7-4.6 72.9-2.2h1.4c64.3-1.4 129.3 7 130 7.1h.1l10.1 1.2c-.6 2.8-.9 5.8-.9 8.8v162.6c0 4.3.7 8.5 1.9 12.4-1.8 6.7-6.8 21.6-18.6 34.3-44.9 35.6-88.8 155.7-90.7 160.9-.8 2.1-1 4.4-.6 6.7 1.7 11.2 1.1 24.9-1.3 29-5.3-.1-19.6-1.6-28.2-13.5-10.2-14.1-9.8-39.3 1.2-72.7 16.8-50.9 18.2-77.7 4.9-89.5-6.6-5.9-15.4-6.2-21.8-3.9-6.1 1.4-11.9 2.6-17.4 3.5-.4.1-.9.2-1.3.3-30.7 6.7-85.7 10.8-104.8-6.6-16.2-14.8-4.7-34.4-3.4-36.5 3.7-5.6 2.6-12.9-2.4-17.4-.1-.1-10.6-10-11.1-23.3-.4-8.9 3.8-18 12.5-27z'/%3E%3C/svg%3E");
-    }
-
-    .rating .total {
-      padding: 0 40px;
-    }
-
-    .rating .total span {
-      font-family: 'Rubik', sans-serif;
-      font-size: 30px;
-      font-weight: bold;
-      line-height: 30px;
-    }
-
-    @media screen and (max-height: 700px) {
-      .rating {
-        display: none;
-      }
-    }
-
+		@media screen and (max-height: 520px) {
+			.tracklist {
+				display: none;
+			}
+		}
 
     /*BUTTON------------------------------------------------*/
 
@@ -751,10 +712,6 @@
   <div class="inner">
     <div class="track">
       <div class="logo"></div>
-      <div class="title-wrapper">
-        <p class="band">Foo Fighters</p>
-        <p class="title">Word Forward</p>
-      </div>
     </div>
     <div class="track-info-btn">
       <button disabled>Информация о треке</button>
@@ -765,20 +722,55 @@
 <!--      <tr><td>Жанр</td><td>Рок</td></tr>-->
 <!--      <tr><td>Прослушано</td><td>182 раз(а)</td></tr>-->
 <!--    </table>-->
-		<div class="placeholder"></div>
-    <div class="rating">
-      <div class="inner">
-        <div class="like-wrapper">
-          <button disabled></button>
-        </div>
-        <div class="total">
-          <span>150</span>
-        </div>
-        <div class="dislike-wrapper">
-          <button disabled></button>
-        </div>
-      </div>
-    </div>
+		<div class="tracklist">
+			<table>
+				<tr>
+					<td>Word Forward</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>Learn to Fly</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>The Line</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>The One</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>Next Year</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>Walk</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>My Hero</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>Marigold</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+				<tr>
+					<td>Everlong</td>
+					<td>Foo Fighters</td>
+					<td>3:08</td>
+				</tr>
+			</table>
+		</div>
     <div class="player">
       <div class="inner">
         <div class="top">
